<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Orange client alarm</string>
    <string name="title_activity_content">ContentActivity</string>
    <string name="title_activity_change_cred">ChangeCredActivity</string>
    <string name="welcome_message">Welcome to Orange client alarm!</string>
    <string name="invalid_creds_toast_msg">Credentials are invalid</string>
    <string name="invalid_username_error_msg">invalid username</string>
    <string name="sign_out_button_text">Sign Out</string>
    <string name="change_creds_button_text">change creds</string>
    <string name="creds_updated_msg">Credentials updated outside Smart Lock.</string>
    <string name="creds_save_button_text">Save</string>
    <string name="clear_button_text">Clear</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="password_hint">Password</string>
    <string name="username_hint">Username</string>

    <string name="alarm_notification_title_template">Orange Alarm</string>
    <string name="alarm_notification_text_alarm_paused">Alarm is paused</string>
    <string name="alarm_notification_text_alarm_resumed">Alarm is resumed</string>
    <string name="alarm_notification_text_credential_incorrect">Credentials are incorrect, click to reenter</string>
    <string name="alarm_notification_text_pause_exception">Failed to pause: %s. You can try again manually. Click notification.</string>
    <string name="alarm_notification_text_resume_exception">Failed to resume: %s. You can try again manually. Click notification.</string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
    <string name="status">Status</string>
    <string name="your_status">You logged in as: %s.</string>
    <string name="credentials_invalid">Credentials are invalid. Username or password are incorrect.</string>
    <string name="channel_name">SecurityAlarm channel</string>
    <string name="channel_description">SecurityAlarm channel</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices found</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>
    <string name="Unit">Unit</string>
    <string name="email">Email</string>
    <string name="device">Device</string>
    <string name="title_activity_maps">Map</string>
    <string name="menu_update_state">Update state</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="settings_title">Settings</string>
    <string name="pref_unit_recommendations">Select unit</string>
    <string name="pref_device_recommendations">Select device</string>
    <string name="wialon_host_title">Orange host</string>
    <string name="pref_title_enable_bt_auto_switching">Bluetooth alarm switching</string>
    <string name="pref_description_enable_bt_auto_switching">Activate/deactivate alarm on connecting/disconnecting to selected device</string>
    <string name="error_credentials_retrieve">Unable to retrieve credentials. Try again later</string>
    <string name="error_data_retrieve">Unable to retrieve data from Orange. Try again later</string>
    <string name="pref_header_advanced">Advanced</string>
    <string name="geozone_name_title">Geozone name</string>
    <string name="notification_name_title">Notification name</string>
    <string name="notification_email_subject_title">Notification email subject</string>
    <string name="geozone_radius_title">Geozone radius</string>
    <string name="notification_pattern_title">Notification pattern</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="geozone_color_title">Geozone color</string>
    <string name="geozone_color_summary">Change geozone color</string>
</resources>