<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="btAutoSwitchingPreference"
        android:summary="@string/pref_description_enable_bt_auto_switching"
        android:title="@string/pref_title_enable_bt_auto_switching" />

    <ListPreference
        android:key="devicePreference"
        android:dependency="btAutoSwitchingPreference"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/device" />

    <ListPreference
        android:key="unitPreference"
        android:dependency="btAutoSwitchingPreference"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/Unit" />

</PreferenceScreen>
