<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.romif.securityalarm.androidclient.feature.activities.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_bluetooth_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.romif.securityalarm.androidclient.feature.activities.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.romif.securityalarm.androidclient.feature.activities.SettingsActivity$AdvancedPreferenceFragment"
        android:icon="@drawable/ic_settings_applications_black_24dp"
        android:title="@string/pref_header_advanced" />

</preference-headers>
